// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should init en locale 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=UTF-8\\\\n\\"
\\"Plural-Forms: nplurals = 2; plural = (n != 1);\\\\n\\"
\\"Language: en\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;

exports[`should init uk locale 1`] = `
"msgid \\"\\"
msgstr \\"\\"
\\"Content-Type: text/plain; charset=UTF-8\\\\n\\"
\\"Plural-Forms: nplurals = 3; plural = (n % 10 == 1 && n % 100 != 11 ? 0 : n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 10 || n % 100 >= 20) ? 1 : 2);\\\\n\\"
\\"Language: uk\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"
"
`;
